--- a/iframe/search.html
+++ b/iframe/search.html
@@ -19,4 +19,9 @@
 	function searchAction(argument) {
 		parent.searchAction(argument)
 	}
+	// searchAction(999)
+	// 父亲操作儿子-初始化
+	function initSearch(argument) {
+		alert(argument)
+	}
 </script>
