--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+	<meta charset="UTF-8">
 	<title>火把知识-后台-规范手册</title>
 	<link rel="stylesheet" type="text/css" href="layui-2.0/css/layui.css">
 	<!-- 样式重定义 -->
 	<link rel="stylesheet" type="text/css" href="layui-2.0/css/public.css">
+	<!--公共样式-->
+	<link rel="stylesheet" type="text/css" href="layui-2.0/css/component/select.css">
 	<style type="text/css">
 		#menu {
 			position: fixed;
@@ -20,26 +22,21 @@
 			padding: 10px;
 			box-sizing: border-box;
 		}
-
 		#menu a {
 			display: block;
 			padding: 10px 0;
 		}
-
 		section {
 			margin-left: 100px;
 		}
-
 		article {
 			padding: 20px 0;
 		}
-
 		p {
 			padding: 10px 0;
 		}
 	</style>
 </head>
-
 <body>
 
 	<div id="menu">
@@ -47,52 +44,21 @@
 		<a href="#search">搜索</a>
 		<a href="#color">颜色</a>
 		<a href="#tab">选项卡</a>
-		<a href="#breadcrumb">面包屑</a>
-		<a href="#input">文本域</a>
 	</div>
 
 	<section>
 		<article id="button">
 			<!-- 按钮1 -->
 			<p>----- 按钮 -----</p>
-			<button type="button" class="layui-btn">按钮1</button>
-			<button type="button" class="layui-btn layui-btn-disabled">按钮1禁用</button>
+			<button type="button" class="layui-btn layui-btn-normal">按钮1</button>
+			<button type="button" class="layui-btn layui-btn-disabled">按钮1</button>
 			<!-- 按钮2 -->
 			<button type="button" class="layui-btn layui-btn-primary">按钮2</button>
-			<button type="button" class="layui-btn layui-btn-primary layui-btn-disabled">按钮2禁用</button>
-			<!-- 按钮3 -->
-			<button type="button" class="layui-btn layui-btn-normal">按钮3</button>
-			<button type="button" class="layui-btn layui-btn-normal layui-btn-disabled">按钮3禁用</button>
-			<!-- 按钮4 -->
-			<button type="button" class="layui-btn layui-btn-warm">按钮4</button>
-			<button type="button" class="layui-btn layui-btn-warm layui-btn-disabled">按钮4禁用</button>
-			<!-- 按钮4 -->
-			<button type="button" class="layui-btn layui-btn-danger">删除</button>
-			<!-- 按钮5 -->
-			<button type="button" class="layui-btn layui-btn-five">按钮5<i
-					class="layui-icon layui-icon-down"></i></button>
-			<!-- 按钮6 -->
-			<button type="button" class="layui-btn layui-btn-six">按钮5<i class="layui-icon layui-icon-down"></i></button>
-			<!-- 固定底部按钮 -->
-			<div class="bottom-layui-btn">
-				<button type="button" class="layui-btn">保存并提交</button>
-			</div>
 		</article>
-		<article id="input">
-			<p>----- 文本域 -----</p>
-			<form class="layui-form">
-				<input type="text" name="title" required lay-verify="required" placeholder="输入搜索关键字" autocomplete="off"
-					class="layui-input">
-				<div class="input-first-container">
-					<input type="text" name="title" required lay-verify="required" placeholder="输入搜索关键字"
-						autocomplete="off" class="layui-input">
-					<div class="input-number"><span class="input-on-number">0</span>/<span class="input-max-number">100</span></div>
-				</div>
-			</form>
-		</article>
+
 		<article id="search">
 			<p>----- 搜索 -----</p>
-			<iframe src="iframe/search.html" name="search"></iframe>
+			<iframe src="iframe/search.html"></iframe>
 		</article>
 
 		<article id="color">
@@ -101,53 +67,49 @@
 		</article>
 
 		<article id="tab">
-			<p>----- 选项卡1 -----</p>
+			<p>----- 选项卡 -----</p>
 			<div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
 				<ul class="layui-tab-title">
-					<li class="layui-this">选项一</li>
-					<li>选项二</li>
+				  <li class="layui-this">选项一</li>
+				  <li>选项二</li>
 				</ul>
 				<div class="layui-tab-content"></div>
+			  </div>
+		</article>
+		<article id="select">
+			<p>----- 下拉 -----</p>
+			<div class="layui-form-item layui-inline">
+				<select name="city" lay-verify="required" class="size">
+					<option value="">未选择</option>
+					<option value="0">1</option>
+					<option value="1">2</option>
+				</select>
 			</div>
-			<p>----- 选项卡2 -----</p>
-			<div class="tab-second-container">
-				<div class="tab-second-content active">选项1</div>
-				<div class="tab-second-content">选项二</div>
-				<div class="tab-second-content">选项三</div>
+			<div class="layui-form-item layui-inline">
+				<select name="city" lay-verify="required" class="sizeMin">
+					<option value="">未选择</option>
+					<option value="0">1</option>
+					<option value="1">2</option>
+				</select>
 			</div>
 		</article>
-
-		<article id="breadcrumb">
-			<p>----- 面包屑 -----</p>
-            <div class="breadcrumb-container">
-                <span class="layui-breadcrumb">
-                    <a href="/">首页</a>
-                    <a href="/demo/">演示</a>
-                    <a><cite>导航元素</cite></a>
-                </span>
-            </div>
+		<article id="checkbox">
+			<p>----- 复选框 -----</p>
+			<form class="layui-form" action="">
+				<input type="checkbox" name="item_id" value=""
+					   lay-skin="primary">
+			</form>
 		</article>
 	</section>
 
 </body>
-
 </html>
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
-<script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
-	// 搜索入参
-	let searchData = {
-		msg: 'hello'
-	};
-	// 儿子操作父亲-搜索
-	function searchAction(argument) {
-		alert(argument)
-	}
-	// 父亲操作儿子-传入参
-	layui.use(['element', 'jquery'], function () {
-		var $ = layui.jquery,
-			element = layui.element;
-		// $('iframe[name=search]')[0].contentWindow.initSearch(searchData);
-	});
+	//初始化layui
+	layui.use(['element', 'form'], function () {
+		var element = layui.element,
+			form = layui.form,
+			$ = layui.$;
+	})
 </script>
