--- a/index.html
+++ b/index.html
@@ -78,14 +78,17 @@
 			</div>
 		</article>
 		<article id="input">
-			<p>----- 文本域 -----</p>
 			<form class="layui-form">
+				<p>----- 文本域1 -----</p>
+
 				<input type="text" name="title" required lay-verify="required" placeholder="输入搜索关键字" autocomplete="off"
 					class="layui-input">
+				<p>----- 文本域2 -----</p>
 				<div class="input-first-container">
 					<input type="text" name="title" required lay-verify="required" placeholder="输入搜索关键字"
 						autocomplete="off" class="layui-input">
-					<div class="input-number"><span class="input-on-number">0</span>/<span class="input-max-number">100</span></div>
+					<div class="input-number"><span class="input-on-number">0</span>/<span
+							class="input-max-number">100</span></div>
 				</div>
 			</form>
 		</article>
