--- a/frame.html
+++ b/frame.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="layui-2.0/css/public.css">
     <script>
         if (localStorage.getItem('state') == 'small') {
-            document.write("<link rel='stylesheet' id='smallLink' href='https://shopadmin.mhuoba.com/style/css/small.css' />");
+            // document.write("<link rel='stylesheet' id='smallLink' href='https://shopadmin.mhuoba.com/style/css/small.css' />");
         } else {
-            document.write("<link rel='stylesheet' id='largeLink' href='https://shopadmin.mhuoba.com/style/css/large.css' />");
+            // document.write("<link rel='stylesheet' id='largeLink' href='https://shopadmin.mhuoba.com/style/css/large.css' />");
         }
     </script>
 </head>
