--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		</article>
 		<article id="search">
 			<p>----- 搜索 -----</p>
-			<iframe src="iframe/search.html"></iframe>
+			<iframe src="iframe-2.0/search.html" name="high-search"></iframe>
 		</article>
 
 		<article id="color">
