--- a/frame.html
+++ b/frame.html
@@ -143,7 +143,7 @@
             <div class="breadcrumb-container">
                 <span class="layui-breadcrumb">
                     <a href="/">首页</a>
-                    <a href="/demo/">演示</a>
+                    <a href="/frame.html">框架</a>
                     <a><cite>导航元素</cite></a>
                 </span>
             </div>
