--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>火把知识-后台-规范手册</title>
@@ -22,21 +23,28 @@
 			padding: 10px;
 			box-sizing: border-box;
 		}
+
 		#menu a {
 			display: block;
 			padding: 10px 0;
 		}
+
 		section {
 			margin-left: 100px;
+			padding-bottom: 80px;
 		}
+
 		article {
 			padding: 20px 0;
+			height: auto;
 		}
+
 		p {
 			padding: 10px 0;
 		}
 	</style>
 </head>
+
 <body>
 
 	<div id="menu">
@@ -49,8 +57,8 @@
 	<section>
 		<article id="button">
 			<!-- 按钮1 -->
-			<p>----- 按钮 -----</p>
-			<button type="button" class="layui-btn layui-btn-normal">按钮1</button>
+			<p>----- 按钮1 -----</p>
+			<button type="button" class="layui-btn">按钮1</button>
 			<button type="button" class="layui-btn layui-btn-disabled">按钮1</button>
 			<!-- 按钮2 -->
 			<button type="button" class="layui-btn layui-btn-primary">按钮2</button>
@@ -61,13 +69,13 @@
 			<!-- 按钮4 -->
 			<button type="button" class="layui-btn layui-btn-warm">按钮4</button>
 			<button type="button" class="layui-btn layui-btn-warm layui-btn-disabled">按钮4禁用</button>
-			<!-- 按钮4 -->
+			<!-- 删除按钮 -->
 			<button type="button" class="layui-btn layui-btn-danger">删除</button>
 			<!-- 按钮5 -->
 			<button type="button" class="layui-btn layui-btn-five">按钮5<i
 					class="layui-icon layui-icon-down"></i></button>
 			<!-- 按钮6 -->
-			<button type="button" class="layui-btn layui-btn-six">按钮5<i class="layui-icon layui-icon-down"></i></button>
+			<button type="button" class="layui-btn layui-btn-six">按钮6<i class="layui-icon layui-icon-down"></i></button>
 			<!-- 固定底部按钮 -->
 			<div class="bottom-layui-btn">
 				<button type="button" class="layui-btn">保存并提交</button>
@@ -77,14 +85,20 @@
 			<form class="layui-form">
 				<p>----- 文本域1 -----</p>
 
-				<input type="text" name="title" required lay-verify="required" placeholder="输入搜索关键字" autocomplete="off"
+				<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off"
 					class="layui-input">
 				<p>----- 文本域2 -----</p>
-				<div class="input-first-container">
-					<input type="text" name="title" required lay-verify="required" placeholder="输入搜索关键字"
+				<div class="input-second-container">
+					<input type="text" name="title" placeholder="输入搜索关键字"
 						autocomplete="off" class="layui-input">
 					<div class="input-number"><span class="input-on-number">0</span>/<span
 							class="input-max-number">100</span></div>
+				</div>
+				<p>----- 文本域3 -----</p>
+				<div class="input-third-container">
+					<input type="text" name="title" placeholder="输入搜索关键字"
+						autocomplete="off" class="layui-input">
+					<div class="input-before">￥</div>
 				</div>
 			</form>
 		</article>
@@ -100,14 +114,20 @@
 		</article>
 
 		<article id="tab">
-			<p>----- 选项卡 -----</p>
+			<p>----- 选项卡1 -----</p>
 			<div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
 				<ul class="layui-tab-title">
-				  <li class="layui-this">选项一</li>
-				  <li>选项二</li>
+					<li class="layui-this">选项一</li>
+					<li>选项二</li>
 				</ul>
 				<div class="layui-tab-content"></div>
-			  </div>
+			</div>
+			<p>----- 选项卡2 -----</p>
+			<div class="tab-second-container">
+				<div class="tab-second-content active">选项一</div>
+				<div class="tab-second-content">选项二</div>
+				<div class="tab-second-content">选项三</div>
+			</div>
 		</article>
 		<article id="select">
 			<p>----- 下拉 -----</p>
@@ -129,20 +149,23 @@
 		<article id="checkbox">
 			<p>----- 复选框 -----</p>
 			<form class="layui-form" action="">
-				<input type="checkbox" name="item_id" value=""
-					   lay-skin="primary">
+				<input type="checkbox" name="item_id" value="" lay-skin="primary">
 			</form>
 		</article>
 	</section>
 
 </body>
+
 </html>
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
+<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
+<script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
 	//初始化layui
 	layui.use(['element', 'form'], function () {
 		var element = layui.element,
 			form = layui.form,
 			$ = layui.$;
+		
 	})
 </script>
