--- a/iframe-2.0/search.html
+++ b/iframe-2.0/search.html
@@ -1,20 +1,121 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>火把知识-后台</title>
 	<link rel="stylesheet" type="text/css" href="../layui-2.0/css/layui.css">
-	<!-- 按钮 -->
-	<link rel="stylesheet" type="text/css" href="../layui-2.0/css/component/button.css">
+	<!-- 公用样式 -->
+	<link rel="stylesheet" type="text/css" href="../layui-2.0/css/public.css">
 </head>
-<body>
 
-	<!-- 搜索 -->
-	<div>搜索</div>
+<body>
+	<!-- 高级搜索 -->
+	<div class="high-search-container">
+		<div class="high-search-left">
+			<button type="button" class="layui-btn">导出数据</button>
+			<button type="button" class="layui-btn layui-btn-five">批量操作<i
+					class="layui-icon layui-icon-down"></i></button>
+		</div>
+		<div class="high-search-right">
+			<div class="high-search-fold">
+				<div class="tab-second-container layui-inline">
+					<div class="tab-second-content active">选项一</div>
+					<div class="tab-second-content">选项二</div>
+					<div class="tab-second-content">选项三</div>
+				</div>
+				<div class="tab-search-input layui-inline">
+					<form action="" class="layui-form">
+						<div class="layui-inline">
+							<input type="text" name="keyword" placeholder="输入搜索关键字" autocomplete="off"
+								class="layui-input">
+						</div>
+					</form>
+				</div>
+				<div class="layui-inline">
+					<button type="button" class="layui-btn high-search-result-btn">搜索</button>
+					<button type="button" class="layui-btn layui-btn-primary high-search-btn">高级</button>
+				</div>
+			</div>
+			<div class="high-search-open">
+				<div class="tab-second-container">
+					<div class="tab-second-content active">选项一</div>
+					<div class="tab-second-content">选项二</div>
+					<div class="tab-second-content">选项三</div>
+				</div>
+				<div class="high-search-input">
+					<form action="" class="layui-form">
+						<div class="layui-inline">
+							<input type="text" name="keyword" placeholder="输入搜索关键字" autocomplete="off"
+								class="layui-input">
+						</div>
+						<div class="layui-inline">
+							<input type="text" name="author" placeholder="请输入作者名称" autocomplete="off"
+								class="layui-input">
+						</div>
+						<div class="layui-inline">
+							<input type="text" name="publishName" placeholder="请输入出版社名称" autocomplete="off"
+								class="layui-input">
+						</div>
+						<div class="layui-inline">
+							<input type="text" name="supplierID" placeholder="请输入销售商户的商户ID" autocomplete="off"
+								class="layui-input">
+						</div>
+					</form>
+				</div>
+				<div class="high-search-catalog">
+					<span>选择分类：</span>
+					<div class="layui-inline"></div>
+				</div>
+				<div class="high-search-from">
+					<span>渠道来源：</span>
+					<div class="layui-inline">
+						<button type="button" class="layui-btn layui-btn-normal from-btn">全部</button>
+						<button type="button" class="layui-btn layui-btn-warm from-btn">库存充足 </button>
+						<button type="button" class="layui-btn layui-btn-warm from-btn">库存紧张 </button>
+						<button type="button" class="layui-btn layui-btn-warm from-btn">缺货中</button>
+					</div>
+				</div>
+				<div class="high-search-bottom">
+					<button type="button" class="layui-btn high-search-result-btn">搜索</button>
+					<button type="button" class="layui-btn layui-btn-primary high-search-reset-btn">重置</button>
+					<button type="button" class="layui-btn layui-btn-primary high-search-fold-btn">收起</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
+
 </html>
 <script type="text/javascript" src="../layui-2.0/layui.js"></script>
+<script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript">
+	// 点击高级按钮
+	$('body').on('click','.high-search-btn',function(){
+		$('.high-search-left').css('float','none')
+		$('.high-search-right').css('float','none')
+		$('.high-search-fold').css('display','none')
+		$('.high-search-open').css('display','block')
+	})
+	// 点击收起按钮
+	$('body').on('click','.high-search-fold-btn',function(){
+		var _val = $('.high-search-container').find('input[name="keyword"]').val();
+		$('.high-search-left').css('float','left')
+		$('.high-search-right').css('float','right')
+		$('.high-search-fold').css('display','block')
+		$('.high-search-open').css('display','none')
+		$('.high-search-container').find('input').val('')
+		$('.high-search-container').find('input[name="keyword"]').val(_val)
+	})
+	// 监听关键字输入框
+	$('body').on('input','input[name="keyword"]',function(){
+		var _val = $(this).val()
+		$('.high-search-container').find('input[name="keyword"]').val(_val)
+	})
+	// 点击重置按钮
+	$('body').on('click','.high-search-reset-btn',function(){
+		$('.high-search-container').find('input').val('')
+	})
 	// 搜索
 	function searchAction(argument) {
 		parent.searchAction(argument)
