--- a/zhuanjixinjian.html
+++ b/zhuanjixinjian.html
@@ -37,7 +37,7 @@
 <body>
     <div class="layui-body">
         <div style="background: #fff;margin: 10px;">
-            <div id="tab">
+            <div>
                 <div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
                     <ul class="layui-tab-title">
                         <li class="layui-this">音视频专辑新建</li>
@@ -58,7 +58,7 @@
                     </div>
                     <!-- 基本信息部分 -->
                     <div id="basic_info">
-                        <div id="input">
+                        <div>
                             <div class="input-first-container">
                                 <label class="layui-form-label" style="color: #333333;width: 90px;"><span style="color: #F05654;">*</span>专辑名称：</label>
                                 <div class="layui-inline" style="width: 850px;">
@@ -75,7 +75,7 @@
                                 专辑名称不可为空
                             </div>
                         </div>
-                        <div id="input" style="margin-top: 10px;">
+                        <div style="margin-top: 10px;">
                             <div class="input-first-container">
                                 <label class="layui-form-label" style="color: #333333;width: 90px;"><span style="color: #F05654;">*</span>专辑副标题：</label>
                                 <div class="layui-inline" style="width: 850px;">
