--- a/frame.html
+++ b/frame.html
@@ -9,129 +9,121 @@
     <link rel="stylesheet" type="text/css" href="layui-2.0/css/layui.css">
     <!-- 样式重定义 -->
     <link rel="stylesheet" type="text/css" href="layui-2.0/css/public.css">
-    <script>
-        if (localStorage.getItem('state') == 'small') {
-            // document.write("<link rel='stylesheet' id='smallLink' href='https://shopadmin.mhuoba.com/style/css/small.css' />");
-        } else {
-            // document.write("<link rel='stylesheet' id='largeLink' href='https://shopadmin.mhuoba.com/style/css/large.css' />");
-        }
-    </script>
+    <!-- 字体图标 -->
+    <script src="layui-2.0/font/iconfont.js"></script>
 </head>
 
-<body class="layui-layout-body">
+<body class="large">
+    <script>
+        if (localStorage.getItem('slideState') == 'small') {
+            document.querySelector('body').setAttribute('class', 'small');
+        } else {
+            document.querySelector('body').setAttribute('class', 'large');
+        }
+    </script>
     <div class="layui-layout layui-layout-admin">
         <!-- 供应商logo -->
         <div class="layui-logo">
-            <a style="display:inline-block;width:35px;height:35px;vertical-align:middle;background:url('https://shopadmin.mhuoba.com/style/images/logo.png') no-repeat 50% 50%;background-size:contain;"
-                href="/">
-                <!-- <span style="display:inline-block;width:35px;height:35px;vertical-align:middle;background:url('https://shopadmin.mhuoba.com/style/images/logo.png') no-repeat 50% 50%;background-size:contain;"></span>  -->
-            </a>
-
-            <span class="textOverflow name logoTitle" style="width:130px;vertical-align:middle;">火把知识服务平台
-
-            </span>
+            <img src="layui-2.0/images/logo.png" width="26px" height="27px">
+            <span class="slogan">火把知识服务平台</span>
+            <div class="foldAction">
+                <i class="layui-icon layui-icon-shrink-right"></i>
+                <i class="layui-icon layui-icon-spread-left"></i>
+            </div>
         </div>
 
         <!-- 头部 栏目 -->
         <div class="layui-header">
-            <!-- 菜单切换之后的 选项 -->
-            <span class="layui-breadcrumb">
-                <i class="layui-icon layui-icon-shrink-right shrink"></i>
-            </span>
-
             <!-- 头部导航栏右边部分 -->
             <ul class="layui-nav layui-layout-right">
-                <li class="layui-nav-item ">
-                    <a href="/letter/lists">
-                        <i class="layui-icon iconfont iconmessage-line"></i><span>私信</span><span
-                            class="layui-badge-dot"></span> </a>
-                </li>
-                <li class="layui-nav-item ">
-                    <a href="/letter/notify/lists">
-                        <i class="layui-icon iconfont iconnews-line"></i>通知中心<span class="layui-badge-dot"></span> </a>
-                </li>
-                <li class="layui-nav-item ">
-                    <a href="/helper/lists">
-                        <i class="layui-icon iconfont iconhelp-line"></i>帮助中心
+                <li class="layui-nav-item">
+                    <a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#iconmessage-line"></use>
+                        </svg>
+                        <span>私信</span>
+                        <span class="layui-badge-dot"></span>
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">
-                        <!-- <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> -->
-                        <span class="role_name pf-b">管理员</span>
-                        商务账号 </a>
+                    <a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#iconnews-line"></use>
+                        </svg>
+                        <span>通知中心</span>
+                        <span class="layui-badge-dot"></span>
+                    </a>
+                </li>
+                <li class="layui-nav-item ">
+                    <a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#iconhelp-line"></use>
+                        </svg>
+                        <span>帮助中心</span>
+                    </a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="#">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                        <span>用户名</span>
+                    </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/">账号主页</a></dd>
-                        <dd><a href="/set/editpwd">修改密码</a></dd>
-                        <dd><a class="logout" href="javascript:void(0)">退出登录</a></dd>
+                        <dd><a href="#">账号主页</a></dd>
+                        <dd><a href="#">修改密码</a></dd>
+                        <dd><a class="logout" href="#">退出登录</a></dd>
                     </dl>
                 </li>
             </ul>
-
         </div>
 
         <!-- 侧边栏部分 -->
+        <!-- 展开 -->
         <div class="layui-side layui-bg-black large">
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-
-                <ul class="layui-nav layui-nav-tree" lay-shrink="all" lay-filter="test">
-                    <li class="layui-nav-item  ">
-                        <a class="" href="/">
-                            <i class="clwhite fs-18 layui-icon iconfont iconoverview-block"></i>
-                            总览
+                <ul class="layui-nav layui-nav-tree">
+                    <li class="layui-nav-item">
+                        <a href="#">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#iconoverview-block"></use>
+                            </svg>
+                            <span>总览</span>
                         </a>
                     </li>
                     <li class="layui-nav-item layui-nav-itemed">
-
-                        <a class="" href="javascript:;">
-                            <i class="clwhite fs-18 layui-icon iconfont iconsource-block"></i>
-                            发布管理 </a>
-
-
+                        <a href="#">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#iconsource-block"></use>
+                            </svg>
+                            <span>发布管理</span>
+                        </a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/resource/article/lists">文章列表</a></dd>
-                            <dd><a href="/resource/audio/lists">音频列表</a></dd>
-                            <dd><a href="/resource/vedio/lists">视频列表</a></dd>
-                            <dd class="layui-this"><a href="/resource/album/lists">专辑列表</a></dd>
-                            <dd><a href="/resource/ebook/lists">电子书列表</a></dd>
-                            <dd><a href="/resource/package/lists">文件包列表</a></dd>
-                            <dd><a href="/resource/book/lists">图书列表</a></dd>
-                            <dd><a href="/resource/content/lists">综合列表</a></dd>
+                            <dd><a href="#">文章列表</a></dd>
+                            <dd class="layui-this"><a href="#">专辑列表</a></dd>
                         </dl>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="side small">
-            <ul class="nav nav-tree">
-                <li class="nav-item  ">
-                    <a class="" href="/">
-                        <i class="clwhite fs-18 layui-icon iconfont iconoverview-block"></i>
+        <!-- 收起 -->
+        <div class="layui-side layui-bg-black small">
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#iconoverview-block"></use>
+                        </svg>
                     </a>
                 </li>
-                <li class="nav-item nav-itemed">
-                    <a class="" href="javascript:;">
-                        <i class="clwhite fs-18 layui-icon iconfont iconsource-block"></i>
+                <li class="layui-nav-item">
+                    <a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#iconsource-block"></use>
+                        </svg>
                     </a>
-                    <span class="left"></span>
-                    <dl class="nav-child">
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/article/lists">文章列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/audio/lists">音频列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/vedio/lists">视频列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd class="check-this"><a href="/resource/album/lists">专辑列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/ebook/lists">电子书列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/package/lists">文件包列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/book/lists">图书列表</a></dd>
-                        <span class="left-triangle"></span>
-                        <dd><a href="/resource/content/lists">综合列表</a></dd>
+                    <dl class="layui-nav-child">
+                        <dd><a href="#">文章列表</a></dd>
+                        <dd><a href="#">专辑列表</a></dd>
                     </dl>
                 </li>
             </ul>
@@ -157,5 +149,20 @@
     layui.use(['element', 'jquery'], function () {
         var $ = layui.jquery,
             element = layui.element;
+
+        // 展开收缩
+        $('.foldAction').on('click', function () {
+            var body = $(this).parents('body');
+            var slideState = '';
+            // 展开隐藏图标切换
+            if ($(body).hasClass('small')) {
+                $(body).removeClass('small').addClass('large');
+                slideState = 'large';
+            } else {
+                $(body).removeClass('large').addClass('small');
+                slideState = 'small';
+            }
+            localStorage.setItem('slideState', slideState);
+        })
     });
 </script>
