--- a/frame.html
+++ b/frame.html
@@ -139,7 +139,12 @@
                     <a><cite>导航元素</cite></a>
                 </span>
             </div>
+            <div style="height: 700px;background-color: #aaa;">222</div>
+            <div style="height: 700px;background-color: #ccc;">2333</div>
         </div>
+
+        <!-- 底部 -->
+        <div class="layui-footer" style="background-color: #ccc;">111</div>
     </div>
 </body>
 
