--- a/iframe-2.0/search.html
+++ b/iframe-2.0/search.html
@@ -89,6 +89,7 @@
 </html>
 <script type="text/javascript" src="../layui-2.0/layui.js"></script>
 <script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
+<script type="text/javascript" src="../layui-2.0/public.js"></script>
 <script type="text/javascript">
 	// 点击高级按钮
 	$('body').on('click','.high-search-btn',function(){
