--- a/frame.html
+++ b/frame.html
@@ -129,22 +129,21 @@
             </ul>
         </div>
 
+        <!-- 面包屑 -->
+        <div class="breadcrumb-container">
+            <span class="layui-breadcrumb">
+                <a href="/">首页</a>
+                <a href="/frame.html">框架</a>
+                <a><cite>导航元素</cite></a>
+            </span>
+        </div>
         <!-- 主体内容 -->
         <div class="layui-body">
-            <!-- 面包屑 -->
-            <div class="breadcrumb-container">
-                <span class="layui-breadcrumb">
-                    <a href="/">首页</a>
-                    <a href="/frame.html">框架</a>
-                    <a><cite>导航元素</cite></a>
-                </span>
-            </div>
-            <div style="height: 700px;background-color: #aaa;">222</div>
-            <div style="height: 700px;background-color: #ccc;">2333</div>
+            <div style="height: 1700px;">222</div>
         </div>
 
         <!-- 底部 -->
-        <div class="layui-footer" style="background-color: #ccc;">111</div>
+        <div class="layui-footer"></div>
     </div>
 </body>
 
