--- a/index.html
+++ b/index.html
@@ -154,7 +154,20 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>颜色</p>
-			<div class="main-color">品牌色（主色调）</div>
+			<div class="main-color">品牌色（主色调）#f05654</div>
+			<div class="sub1-color">辅助色（button、可点击文字链接等常用色） #54ACF0</div>
+			<div class="sub2-color">辅助色（侧边导航用色） #262A35</div>
+			<div class="sub3-color">辅助色(弱)（次要button等常用色） #EEF7FD</div>
+			<div class="decor1-color">点缀色（商品状态提示(供货中)等） #F0B354</div>
+			<div class="decor2-color">点缀色（商品状态提示(完成)等） #54F075</div>
+			<div class="txt1-color">重要（主要文字） #333333</div>
+			<div class="txt2-color">次要（次要文字） #666666</div>
+			<div class="txt3-color">较弱（次要文字） #999999</div>
+			<div class="disable-color">置灰（不可点击状态） #cccccc</div>
+			<div class="table-br-color">表格分割线用色 #E3E3E3</div>
+			<div class="table-head-color">表格头部用色 #F0F0F0</div>
+			<div class="background-color">背景色 #efefef</div>
+			<div class="block-color">区域色 #ffffff</div>
 		</article>
 
 		<article id="tab">
