--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <body>
 
 	<menu id="anchor">
+		<a href="/frame.html">框架</a>
 		<a href="#button">按钮</a>
 		<a href="#search">搜索</a>
 		<a href="#color">颜色</a>
